RESOLVED FIXED235752
Enhance sanitizeStackForVM() to assist with crash analysis.
https://bugs.webkit.org/show_bug.cgi?id=235752
Summary Enhance sanitizeStackForVM() to assist with crash analysis.
Mark Lam
Reported 2022-01-27 19:12:02 PST
Attachments
proposed patch. (20.12 KB, patch)
2022-01-27 20:08 PST, Mark Lam
ews-feeder: commit-queue-
proposed patch. (17.74 KB, patch)
2022-01-27 21:23 PST, Mark Lam
ews-feeder: commit-queue-
test patch. (23.65 KB, patch)
2022-01-30 18:52 PST, Mark Lam
ews-feeder: commit-queue-
testing on EWS. (23.63 KB, patch)
2022-01-30 18:57 PST, Mark Lam
ews-feeder: commit-queue-
test2 (24.59 KB, patch)
2022-01-30 21:08 PST, Mark Lam
ews-feeder: commit-queue-
test3 (25.36 KB, patch)
2022-01-30 22:43 PST, Mark Lam
ews-feeder: commit-queue-
test4 (25.52 KB, patch)
2022-01-30 23:44 PST, Mark Lam
no flags
test5 (25.52 KB, patch)
2022-01-31 00:03 PST, Mark Lam
ews-feeder: commit-queue-
proposed patch. (17.87 KB, patch)
2022-01-31 16:46 PST, Mark Lam
no flags
proposed patch. (13.94 KB, patch)
2022-01-31 17:43 PST, Mark Lam
no flags
Mark Lam
Comment 1 2022-01-27 20:08:43 PST
Created attachment 450202 [details] proposed patch.
Mark Lam
Comment 2 2022-01-27 21:23:51 PST
Created attachment 450203 [details] proposed patch.
Mark Lam
Comment 3 2022-01-30 18:52:32 PST
Created attachment 450371 [details] test patch.
Mark Lam
Comment 4 2022-01-30 18:57:16 PST
Created attachment 450372 [details] testing on EWS.
Mark Lam
Comment 5 2022-01-30 21:08:25 PST
Mark Lam
Comment 6 2022-01-30 22:43:08 PST
Mark Lam
Comment 7 2022-01-30 23:44:40 PST
Mark Lam
Comment 8 2022-01-31 00:03:42 PST
Mark Lam
Comment 9 2022-01-31 16:46:22 PST
Created attachment 450474 [details] proposed patch.
Mark Lam
Comment 10 2022-01-31 17:43:21 PST
Created attachment 450485 [details] proposed patch.
Michael Saboff
Comment 11 2022-01-31 20:31:09 PST
Comment on attachment 450485 [details] proposed patch. r=me
EWS
Comment 12 2022-02-01 09:35:15 PST
Committed r288885 (246637@main): <https://commits.webkit.org/246637@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450485 [details].
Note You need to log in before you can comment on or make changes to this bug.